--- a/L3.1/Storyboards/Base.lproj/Main.storyboard
+++ b/L3.1/Storyboards/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="LogInPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZaZ-Iq-gQE"/>
-                                            <segue destination="Ui9-YL-nbt" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" id="KT4-TS-MOu"/>
+                                            <segue destination="ENJ-N0-v1K" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" id="KT4-TS-MOu"/>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jh0-sH-ho9">
@@ -90,7 +90,7 @@
             </objects>
             <point key="canvasLocation" x="71" y="4"/>
         </scene>
-        <!--Welcome View Controller-->
+        <!--Item-->
         <scene sceneID="Mup-c6-RNJ">
             <objects>
                 <viewController id="Ui9-YL-nbt" customClass="WelcomeViewController" customModule="L3_1" customModuleProvider="target" sceneMemberID="viewController">
@@ -116,7 +116,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKX-ki-4xf">
-                                <rect key="frame" x="135" y="573" width="105.5" height="44"/>
+                                <rect key="frame" x="135" y="524" width="105.5" height="44"/>
                                 <color key="tintColor" systemColor="systemGray6Color"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Log out">
@@ -136,6 +136,7 @@
                             <constraint firstItem="KbX-df-7kI" firstAttribute="top" secondItem="rlO-BO-Ut1" secondAttribute="top" constant="50" id="cKW-yf-0Jy"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="HgO-br-Ysz"/>
                     <connections>
                         <outlet property="welcomeLabel" destination="s2r-WQ-7Wf" id="pc4-qU-znC"/>
                     </connections>
@@ -143,18 +144,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RV7-o6-hdA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Q7o-i8-LDx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="775" y="3"/>
+            <point key="canvasLocation" x="1712.8" y="2.2488755622188905"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ORo-d4-Pyt">
+            <objects>
+                <viewController id="1H8-9L-sZp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aRg-jz-Qqu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Bie-zj-0dC"/>
+                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="bEH-mv-0J0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Xn-MF-8wB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2558" y="3"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="FkR-n2-npr">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ENJ-N0-v1K" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="43i-gy-TsY">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Ui9-YL-nbt" kind="relationship" relationship="viewControllers" id="bPz-rM-yUq"/>
+                        <segue destination="1H8-9L-sZp" kind="relationship" relationship="viewControllers" id="chF-bQ-kQF"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M3e-Pj-c7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="855" y="3"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
