--- a/L3.1/Storyboards/Base.lproj/Main.storyboard
+++ b/L3.1/Storyboards/Base.lproj/Main.storyboard
@@ -144,23 +144,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RV7-o6-hdA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Q7o-i8-LDx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1712.8" y="2.2488755622188905"/>
+            <point key="canvasLocation" x="1665" y="-386"/>
         </scene>
-        <!--Item-->
+        <!--About Me View Controller-->
         <scene sceneID="ORo-d4-Pyt">
             <objects>
-                <viewController id="1H8-9L-sZp" sceneMemberID="viewController">
+                <viewController id="1H8-9L-sZp" customClass="AboutMeViewController" customModule="L3_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aRg-jz-Qqu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="Bie-zj-0dC"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="bEH-mv-0J0"/>
+                    <navigationItem key="navigationItem" id="8N4-0f-0iI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Xn-MF-8wB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2558" y="3"/>
+            <point key="canvasLocation" x="2506" y="386"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="FkR-n2-npr">
@@ -173,12 +173,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ui9-YL-nbt" kind="relationship" relationship="viewControllers" id="bPz-rM-yUq"/>
-                        <segue destination="1H8-9L-sZp" kind="relationship" relationship="viewControllers" id="chF-bQ-kQF"/>
+                        <segue destination="16M-5f-MPL" kind="relationship" relationship="viewControllers" id="chF-bQ-kQF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M3e-Pj-c7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="855" y="3"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="zqs-Pe-M1n">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="16M-5f-MPL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bEH-mv-0J0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="XtD-Fa-Rwg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1H8-9L-sZp" kind="relationship" relationship="rootViewController" id="OyI-rJ-UHZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ic4-oj-fLT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1665" y="387"/>
         </scene>
     </scenes>
     <resources>
